Object/constants.h

typedef double __complex__ DCOMPLEX;
typedef __CLPK_integer  inta;
typedef __CLPK_doublereal floata;
typedef unsigned long ADDRESS_TYPE;
typedef double floata;
typedef MKL_INT inta;
typedef MKL_INT ADDRESS_TYPE;
typedef double __complex__ DCOMPLEX;
typedef long long int ADDRESS_TYPE;
typedef int inta;
typedef double __complex__ DCOMPLEX;
typedef long long int ADDRESS_TYPE;
typedef lapack_int inta;
typedef double __complex__ DCOMPLEX;
typedef DCOMPLEX mea;
typedef double mea;
enum bodyType {
    nada,
    one,
    two,
    three,
    four,
    five,
    six
};
enum particleType{
    all
};
enum phaseType{
    buildFoundation,
    productKrylov,
    solveRitz
};
enum calculationType{
    nullCalculation,
    electronicStuctureCalculation
};
enum bootType{
    noMatrices,
    fullMatrices
};
enum blockType{
    id0,
    tv1,
    tv2,
    tv3,
    tv4,
    tv5,
    tv6,
    e12,
    e13,
    e23,
    e14,
    e24,
    e34,
    e15,
    e25,
    e35,
    e45,
    e16,
    e26,
    e36,
    e46,
    e56
};
enum genusType{
    scalar,
    vector,
    matrix,
    outerVector,
    eikon,
    eikonDiagonal,
    eikonOffDiagonal,
    eikonSemiDiagonal,
    eikonDeriv,
    eikonKinetic,
    eikonConstant,
    eikonLinear,
    eikonSpring,
    eikonElement,
    eikonOuter
};
enum functionType{
    nullFunction,
    Pseudo,
    Yukawa,
    Coulomb,
    Morse,
    LennardJones,
    LDA,
    BLYP,
    Gaussian
};
enum spinType {
    none,
    real,
    cmpl,
    parallel
};
enum memoryType {
    noAllocation,
    objectAllocation,
    bufferAllocation
};
enum basisElementType {
    nullBasisElement,
    SincBasisElement,
    GaussianBasisElement,
    DiracDeltaElement,
    StateBasisElement
};
enum componentType {
    nullComponent,
    spatialComponent1,
    spatialComponent2,
    spatialComponent3,
    periodicComponent1,
    periodicComponent2,
    periodicComponent3,
};
enum noteType {
    nullNote,
    interactionCell
};
enum metricType {
    dirac,
    separateDirac,
    interval,
    semiIndefinite,
    pureInterval,
    pureSemiIndefinite
};
enum blockMemoryType{
    passBlock,
    blockTotalVectorBlock,
    blockTrainVectorsblock,
    blockCopyBlock,
    blockTransferBasisblock,
    blockMatrixElementsblock,
    blockPermutationsblock,
    blockParallelMultiplyblock,
    blockParallelMatrixElementblock,
    blockParallelPermuteblock,
    blockPrintStuffblock,
    blockTotalVectorParallelBlock
};
enum division{
    nullName,
    nullOverlap,
    nullVector,
    nullMatrix,
    buffer,
    bra,
    bra2,
    bra3,
    bra4,
    bra5,
    bra6,
    bra7,
    bra8,
    bra9,
    bra10,
    Ha, 
    Iterator,
    printOperator,
    copy,
    copyTwo , 
    copyThree,
    copyFour,
    copyFive,
    eigen,
    PauliX,
    PauliY,
    PauliZ,
    trainQuartic,
    cycleVector,
    cycleMatrix,
    cycleQuartic,
    copySix,
    directBak, 
    oneBody,
    entropyVector,
    entropyUnit,
    vectors3,
	basis,
    subBasis,
    quad,
    quad2,
    bandBasis,
    quadCube,
    quad2Cube,
    diagonalCube,
    copyVector,
    copyTwoVector,
    copyThreeVector,
    copyFourVector,
    scalarTemp,
    productVector,
    permutationVector,
    permutation2Vector,
    permutation3Vector,
    permutation4Vector,
    eikonBuffer,
    basisBuffers,
    canonicalBuffers,
    guideBuffer,
    trackBuffer,
    canonicalVector,
    vectorCubeBuffers,
    diagonalQuad,
    diDiagonalQuad,
    diagonal3VectorA,
    diagonal2VectorA,
    diagonal2VectorB,
    diagonal1VectorA,
    diagonalVectorA,
    diagonalVectorB,
    diagonal1VectorB,
    diagonal1VectorC,
    diagonal1VectorD,
    canonicalBuffersB,
    canonicalBuffersC,
    canonicalmvVector,
    canonicalmv2Vector,
    canonicalmv3Vector,
    canonicaldotVector,
    canonicaldot2Vector,
    canonicaldot3Vector,
    canonicalvvVector,
    canonicalvv2Vector,
    canonicalvv3Vector,
    canonicalmeVector,
    canonicalme2Vector,
    canonicalme3Vector,
    multiplyVector,
    eigenList,
    canonicalBuffersAster,
    oneVector,
    twoVector,
    twoBodyRitz,
    totalVector,
    squareTwoVector,
    dsyBuffers,
    matrixSbuild,
    matrixHbuild,
    vectorHbuild,
    twoBodyProjector,
    eigenVectors
};
typedef enum bodyType bodyType;
typedef enum particleType particleType;
typedef enum phaseType phaseType;
typedef enum calculationType calculationType;
typedef enum bootType bootType;
typedef enum blockType blockType;
typedef enum genusType genusType;
typedef enum functionType functionType;
typedef enum spinType spinType;
typedef enum memoryType memoryType;
typedef enum basisElementType basisElementType;
typedef enum componentType componentType;
typedef enum noteType noteType;
typedef enum metricType metricType;
typedef enum blockMemoryType blockMemoryType;
typedef enum division division;
typedef struct function_label function_label;
typedef struct atom_label atom_label;
typedef struct basisElement_label basisElement_label;
typedef struct canon_label canon_label;
typedef struct metric_label metric_label;
typedef struct term_label term_label;
typedef struct runTime runTime;
typedef struct space_label space_label;
typedef struct value_label value_label;
typedef struct name_label name_label;
typedef struct nameDispenser_label nameDispenser_label;
typedef struct sinc_label sinc_label;
typedef struct input_label input_label;
typedef struct field field;
typedef struct input input;
typedef struct calculation calculation;
struct function_label{
    inta interval;
    inta contr;
    functionType fn;
    double param[MAX_PARAM_FUNC];
};
struct atom_label {
    double position[3+1];
    inta Z;
};
struct basisElement_label {
    basisElementType basis;
    componentType component;
    noteType note;
    inta index;
    inta index2;
    double length;
    double origin;
    inta grid;
};
struct dimensions_label {
    double lattice;
    double attack;
    double origin;
    double anchor;
};
struct canon_label {
    floata *stream ;
    basisElementType basis;
    componentType component;
    bodyType body;
    inta label;
    inta count1Basis;
    inta count1Inc;
    inta space;
    struct dimensions_label particle[MAXBODY+1];
};
struct metric_label {
    inta pow[SPACE];
    inta powB[SPACE];
    inta deriv[SPACE];
    struct function_label fn;
    metricType metric;
    double beta[2];
};
struct term_label {
    function_label func;
    char desc[16];
    double scalar ;
    inta type;
    blockType bl ;
    inta act;
    double adjustOne;
    inta label;
    inta invert;
    inta headFlag ;
    inta atom;
    inta bra;
    inta ket;
    inta embed;
    struct metric_label mu;
};
struct runTime {
    blockMemoryType memBlock[BLOCK_COUNT];
    inta NLanes;
#ifdef OMP
    inta NSlot;
#endif
#ifdef MKL
    inta NParallel;
#endif
    double TOLERANCE ;
    double THRESHOLD;
    double XCONDITION;
    double ALPHA ;
    double relativeTOLERANCE;
    inta MAX_CYCLE;
    calculationType calcType;
    phaseType phaseType;
};
struct space_label{
    ADDRESS_TYPE Address;
    bodyType body;
    blockType block;
    inta act;
    inta invert;
    inta bra;
    inta ket;
};
struct value_label{
    char title[MAXSTRING];
    inta stage;
    double value;
    double value2;
    inta symmetry;
};
struct name_label {
    division name;
    genusType species;
    spinType spinor;
    division linkNext;
    division chainNext;
    inta multId;
    division loopNext;
    inta Partition;
    memoryType memory;
    value_label value;
    space_label space[SPACE+1];
    inta Current[MAX_CORE];
    inta Begin[MAX_CORE];
};
struct nameDispenser_label{
    inta currLabel;
    inta maxLabel;
    division head;
};
struct sinc_label {
    struct nameDispenser_label eikonLabels;
    struct nameDispenser_label nullLabels;
    bootType boot;
    inta maxEV;
    inta irrep;
    inta bootedMemory;
    canon_label canon[SPACE+1];
    name_label *name;
    division user;
    division vectorOperator;
    division end;
    spinType cmpl;
    struct runTime * rt;
};
struct input_label {
    inta flex;
    inta OpIndex;
    inta body;
    inta irrep;
    inta matrices ;
    char matrixList [MAX_FILE][MAXSTRING];
    inta files ;
    char fileList [MAX_FILE][MAXSTRING];
    inta filesVectorOperator ;
    char fileVectorOperator [MAX_FILE][MAXSTRING];
    inta Iterations;
    inta nStates;
    inta iRank ;
    inta canonRank;
    inta xRank;
    inta qFloor;
    inta nOperator;
    inta filter;
    inta collect;
    inta cmpl;
};
struct field {
    struct input_label i;
    struct sinc_label f;
};
struct input {
    inta numNames;
    inta numVectors;
    inta build;
    inta termNumber ;
    struct term_label terms[MAXTERM];
    inta minIterationPrint;
    char controlPath[MAXSTRING];
    double shiftVector[2];
    inta shiftFlag ;
#ifdef OMP
    inta omp;
#endif
#ifdef MKL
    inta mkl;
#endif
    inta lambda;
    inta RAMmax ;
    inta Angstroms;
    struct atom_label atoms[MAXATOM+1];
    inta Na;
};
struct calculation {
	char name[MAXSTRING];
	struct input i;
    struct runTime rt;
};